--- a/style.css
+++ b/style.css
@@ -31,3 +31,36 @@ body{
     color: white;
 }
 
+/* For Accordion */
+.accordion:hover{
+    background-color: rgb(141, 99, 248);
+    cursor: pointer;
+  }
+
+
+.panel{
+    padding: 0 20px;
+    background-color: rgb(215, 241, 241);
+    display: none;
+    overflow: hidden;
+    color: white;
+  }
+
+button{
+    background-color: rgb(60, 254, 244);
+    border-color: rgb(60, 126, 240);
+    border-radius: 16px;
+    margin-right: 25px;
+    margin-bottom: 35px;
+    width: 220px;
+  }
+button:hover{
+    background-color:rgb(0, 0, 0);
+    border-color: transparent;
+    border-radius: 16px;
+  }
+
+.small-img{
+    width:600px;
+    height: auto;
+}
